# ai-notebooks

./: README.html  README.org  cifar10-knn.ipynb  mnist_cnn_pytorch.ipynb  pyproject.toml  torching.py
